OpenJMLTest/releaseTests/testPath3/expected
../testfiles/testPath/data/TestPath.java:1: error: cannot find symbol
public class TestPath extends TestPathS {
                              ^
  symbol: class TestPathS
../testfiles/testPath/data-specs/TestPath.jml:3: error: cannot find symbol
    //@ requires q; // BAD
                 ^
  symbol:   variable q
  location: class TestPath
2 errors
